--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Giga</title>
 </head>
 <body>
-Coming soon.
+<h2>Giga Home Improvements</h2>
+<p>216 414 2889</p>
+<p>raygiga2402@gmail.com</p>
 </body>
 </html>
